tests/baselines/reference/argumentsPropertyNameInJsMode1.errors.txt
a.js(9,7): error TS2554: Expected 0-1 arguments, but got 3.


==== a.js (1 errors) ====
    const foo = {
       f1: (params) => { }
    }
    
    function f2(x) {
      foo.f1({ x, arguments: [] });
    }
    
    f2(1, 2, 3);
          ~~~~
!!! error TS2554: Expected 0-1 arguments, but got 3.
    